--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: "Lato", sans-serif;
@@ -10,7 +10,7 @@ body {
   display: block;
   text-align: right;
 }
-.matrix-description img {
+.matrix-description .matrix-img {
   width: 100%;
 }
 .matrix-description .info-link {
@@ -39,17 +39,17 @@ body {
 .new-task-wrapper {
   display: flex;
 }
-ul {
+.ul-block {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.ul-block-list-item, .block-h3 {
   list-style:none;
 }
-input,button{
+.task-input, .input-checkbox,.btn {
   outline:none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -58,12 +58,12 @@ button {
   font-family: "Lato", sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.block-h3,
+.new-task-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -72,7 +72,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.task-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -84,21 +84,21 @@ input[type="text"] {
   font-family: "Lato", sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.task-input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task-label {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.ul-block-list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -107,47 +107,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.ul-block-list-item > .list-element {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.ul-block-list-item > .input-checkbox {
   margin: 0 10px;
 }
-li > label {
+.ul-block-list-item > .task-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li > input[type="text"] {
+.ul-block-list-item > .task-input {
   width: 226px
 }
-button.delete-button img {
+.delete-button .delete-btn-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete-button img:hover {
+.delete-button .delete-btn-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-block label {
+.completed-block .task-label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.ul-block .ul-block-list-item .task-input {
   display:none
 }
 
-ul li.currently-edited-task input[type="text"] {
+.ul-block .currently-edited-task .task-input {
   display:inline-block;
   width:224px
 }
 
-ul li.currently-edited-task label {
+.ul-block .currently-edited-task .task-label {
   display:none;
 }
