refactor: add indents according to rule 3.5 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -18,8 +18,11 @@
 }
 
 @media (max-width:768px) {
-.matrix-description { text-align: center;
-}
+
+  .matrix-description {
+    text-align: center;
+  }
+
 }
 .main-section {
   display: block;
