--- a/style.css
+++ b/style.css
@@ -32,12 +32,12 @@
 .task-input {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-label {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .new-task-wrapper {
   display: flex;
@@ -124,7 +124,7 @@
   width: 226px;
 }
 .ul-block-list-item > .task-input {
-  width: 226px
+  width: 226px;
 }
 .delete-button .delete-btn-img {
   height: 2em;
@@ -137,18 +137,18 @@
 
 /* Completed */
 .completed-block .task-label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .ul-block .ul-block-list-item .task-input {
-  display: none
+  display: none;
 }
 
 .ul-block .currently-edited-task .task-input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .ul-block .currently-edited-task .task-label {
